--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="recaptcha-container"></div>
-    <script src='index.js'></script>
+    <script type="module" src='index.js'></script>
     <script type="module" src='config.js'></script>
 </body>
 </html>
