--- a/index.html
+++ b/index.html
@@ -609,12 +609,12 @@
     <div class="container">
       <div class="navbar-brand">
         <span class="navbar-logo">
-					<a href="https://mobiri.se">
+					<a href="#">
 						<img src="https://proxy.electricblaze.com/?u=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1571019613576-2b22c76fd955%3Fixid%3DM3w0Mzc5fDB8MXxzZWFyY2h8MTR8fHBoeXNpb3RoZXJhcHl8ZW58MHwwfHx8MTczMTE4MjY2NHww%26ixlib%3Drb-4.0.3%26auto%3Dformat%26fit%3Dcrop%26w%3D1200%26q%3D80&amp;e=1731251847&amp;s=T8bZGBDHEFOCGpO0tpErDK0-NRjQYiKntky_w5GcQ9Q" style="height: 4.3rem;">
 					</a>
 				</span>
 				<span class="navbar-caption-wrap">
-          <a class="navbar-caption text-black display-4" href="https://mobiri.se">NextGen</a>
+          <a class="navbar-caption text-black display-4" href="#">NextGen</a>
         </span>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -638,7 +638,7 @@
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="https://mobiri.se">Get Started</a>
+          <a class="btn btn-primary display-4" href="#">Get Started</a>
         </div>
       </div>
     </div>
